# credence-router

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
examples/: langgraph_comparison.py
src/credence_router/: __init__.py  analysis.py  answer.py  benchmark.py  categories.py  cli.py  config.py  group.py  questions.py  router.py  tool.py
src/credence_router/baselines/: __init__.py  langgraph_react.py  simple.py
src/credence_router/compat/: __init__.py  prebuilt.py  routing_node.py  tool_adapter.py
src/credence_router/tools/: __init__.py  calculator.py  claude.py  coverage_prior.py  keyword_category.py  perplexity.py  simulated.py
tests/: test_baselines.py  test_benchmark.py  test_compat.py  test_live.py  test_new_components.py  test_router.py  test_tools.py
